Added horizontal timeline with awards

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         <div class="col-md-12 mt-lg-5 text-left align-self-center text-intro">
           <div class="row">
             <div class="col-lg-8">
+              <p><a href="#portfolio-section" class="btn smoothscroll btn-primary">Portfolio</a></p>
+            </div>
+            <div class="col-lg-8">
               <pre id="typewriter">
                 <span class="var-highlight">var</span> me = {
                   <span class="string-type1tab">name:</span> <span class="string-highlight">'Sergio González Velázquez'</span>,
@@ -96,9 +99,16 @@
                   <span class="string-type1tab">}</span> 
                 }; </pre>
             </div>
+            <div class="col-lg-8">
+              <p><a href="#portfolio-section" class="btn smoothscroll btn-primary">Portfolio</a></p>
+            </div>
           </div>
         </div>
-
+        <div class="row">
+          <div class="scroll-downs">
+            <a class="fa fa-arrow-down fa-2x" href="#"></a>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -164,7 +174,7 @@
             </ul>
           </nav>
         </div>
-        <div class="col-md-9 col-md-offset-0">
+        <div class="col-md-9 col-md-offset-0 pb-2">
           <div id="page-2" class="page two">
             <ul class="timeline">
               <li class="timeline-inverted">
@@ -218,13 +228,50 @@
             </ul>
           </div>
           <div id="page-3" class="page three">
-            <h2 class="heading">Skills</h2>
+            <h2 class="heading">Cursos</h2>
           </div>
 
-
+        </div>
+        <div class="col-md-12 mt-5">
           <div id="page-4" class="page four">
-            <h2 class="heading">Awards</h2>
-
+            <div class="container-horizontal">
+              <ul class="timeline-horizontal">
+                <li><span class="year">Mayo 2017</span>
+                  <ul class="content">
+                    <li>Matricula de Honor en Fundamentos de Programación I</li>
+                  </ul>
+                </li>
+                <li><span class="year">Enero 2018</span>
+                  <ul class="content">
+                    <li>Matricula de Honor en Sistemas Operativos I</li>
+                    <li>Matricula de Honor en Estructuras de Datos</li>
+                  </ul>
+                </li>
+                <li><span class="year">Mayo 2018</span>
+                  <ul class="content">
+                    <li>Matricula de Honor en Redes de Computadores II</li>
+                    <li>Matricula de Honor en Programación Concurrente y Tiempo Real</li>
+                    <li>Matricula de Honor en Bases de Datos</li>
+                  </ul>
+                </li>
+                <li><span class="year">Enero 2019</span>
+                  <ul class="content">
+                    <li>Matricula de Honor en Sistemas Distribuidos</li>
+                  </ul>
+                </li>
+                <li><span class="year">Mayo 2019</span>
+                  <ul class="content">
+                    <li>Matricula de Honor en Interacción Persona-Ordenador II</li>
+                    <li>Matricula de Honor en Aspectos Profesionales de la Informática</li>
+                  </ul>
+                </li>
+                <li><span class="year">Octubre 2019</span>
+                  <ul class="content">
+                    <li>Tercer premio Hackathon 'Santa Tecla' 2019</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -1170,6 +1217,7 @@
 
   <script src="js/main.js"></script>
   <script src="js/timeline.js"></script>
+  <script src="js/timelineHorizontal.js"></script>
   <script src="js/skillsProgressBar.js"></script>
 
 </body>
