Added social icons in home page

--- a/index.html
+++ b/index.html
@@ -84,10 +84,20 @@
 
         <div class="col-md-12 mt-lg-5 text-left align-self-center text-intro">
           <div class="row">
-            <div class="col-lg-8">
-              <p><a href="#portfolio-section" class="btn smoothscroll btn-primary">Portfolio</a></p>
+            <div class="col-lg-8 py-4">
+              <div class="rounded-social-buttons">
+                <a class="social-button" href="https://www.linkedin.com/in/serglezv/" target="_blank">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a class="social-button" href="mailto:serglezv@gmail.com" target="_blank">
+                  <i class="fab fa-google"></i>
+                </a>
+                <a class="social-button" href="https://github.com/SergioGonzalezVelazquez" target="_blank">
+                  <i class="fab fa-github"></i>
+                </a>
+              </div>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-8 py-4">
               <pre id="typewriter">
                 <span class="var-highlight">var</span> me = {
                   <span class="string-type1tab">name:</span> <span class="string-highlight">'Sergio González Velázquez'</span>,
@@ -99,8 +109,8 @@
                   <span class="string-type1tab">}</span> 
                 }; </pre>
             </div>
-            <div class="col-lg-8">
-              <p><a href="#portfolio-section" class="btn smoothscroll btn-primary">Portfolio</a></p>
+            <div class="col-lg-8 py-4">
+              <p><a href="#portfolio" class="btn smoothscroll btn-primary">Portfolio</a></p>
             </div>
           </div>
         </div>
@@ -147,7 +157,7 @@
             <li class="d-flex"><span>Email:</span> <span>serglezv@gmail.com</span></li>
             <li class="d-flex"><span>Teléfono: </span> <span>+34 664 205 678</span></li>
           </ul>
-          <p><a href="#contact-section" class="btn smoothscroll btn-primary">Contact Me</a></p>
+          <p><a href="#contact" class="btn smoothscroll btn-primary">Contacto</a></p>
         </div>
 
       </div>
