--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                 }; </pre>
             </div>
             <div class="col-lg-8 py-4 text-center">
-              <p><a href="#portfolio" class="btn smoothscroll btn-primary">Descarga mi CV</a></p>
+              <p><a href="CV_Sergio_Gonzalez_Velazquez.pdf" download="CV_Sergio_Gonzalez_Velazquez"
+                  class="btn smoothscroll btn-primary">Descarga mi
+                  CV</a></p>
             </div>
           </div>
         </div>
@@ -187,7 +189,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Formación</h2>
-          <h3 class="section-subheading text-muted">"La educación necesita tanto de formación técnica, científica y profresional
+          <h3 class="section-subheading text-muted">"La educación necesita tanto de formación técnica, científica y
+            profresional
             como de sueños y utopías"</h3>
         </div>
       </div>
@@ -204,7 +207,7 @@
         <div class="col-md-9 col-md-offset-0 pb-2">
           <div id="page-2" class="page two">
             <h3 class="heading pt-4 pb-2">Formación y Experiencia</h3>
-            <ul class="timeline">
+            <ul class="timeline pb-lg-4">
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/logos/cambrian.png" alt="Cambrian Intelligence">
@@ -240,7 +243,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/logos/berenguela.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -331,31 +334,31 @@
               <ul class="timeline-horizontal">
                 <li><span class="year">Mayo 2017</span>
                   <ul class="content">
-                    <li>Matricula de Honor en Fundamentos de Programación I</li>
+                    <li>Matrícula de Honor en Fundamentos de Programación I</li>
                   </ul>
                 </li>
                 <li><span class="year">Enero 2018</span>
                   <ul class="content">
-                    <li>Matricula de Honor en Sistemas Operativos I</li>
-                    <li>Matricula de Honor en Estructuras de Datos</li>
+                    <li>Matrícula de Honor en Sistemas Operativos I</li>
+                    <li>Matrícula de Honor en Estructuras de Datos</li>
                   </ul>
                 </li>
                 <li><span class="year">Mayo 2018</span>
                   <ul class="content">
-                    <li>Matricula de Honor en Redes de Computadores II</li>
-                    <li>Matricula de Honor en Programación Concurrente y Tiempo Real</li>
-                    <li>Matricula de Honor en Bases de Datos</li>
+                    <li>Matrícula de Honor en Redes de Computadores II</li>
+                    <li>Matrícula de Honor en Programación Concurrente y Tiempo Real</li>
+                    <li>Matrícula de Honor en Bases de Datos</li>
                   </ul>
                 </li>
                 <li><span class="year">Enero 2019</span>
                   <ul class="content">
-                    <li>Matricula de Honor en Sistemas Distribuidos</li>
+                    <li>Matrícula de Honor en Sistemas Distribuidos</li>
                   </ul>
                 </li>
                 <li><span class="year">Mayo 2019</span>
                   <ul class="content">
-                    <li>Matricula de Honor en Interacción Persona-Ordenador II</li>
-                    <li>Matricula de Honor en Aspectos Profesionales de la Informática</li>
+                    <li>Matrícula de Honor en Interacción Persona-Ordenador II</li>
+                    <li>Matrícula de Honor en Aspectos Profesionales de la Informática</li>
                   </ul>
                 </li>
                 <li><span class="year">Octubre 2019</span>
@@ -1409,18 +1412,19 @@
   <!-- Portfolio filtering -->
   <script src="js/portfolioFilter.js"></script>
 
-  <!-- Typewriter -->
+  <!-- Typewriter en página Home -->
   <script src="js/typewriter.js"></script>
-
-  <!-- Contact form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
 
-  <script src="js/main.js"></script>
-  <script src="js/timeline.js"></script>
+  <!-- Script para la navegación en la sección 'Formación'-->
+  <script src="js/education.js"></script>
+
+  <!-- Script para la navegación en la sección 'Formación'-->
   <script src="js/timelineHorizontal.js"></script>
+
+  <!-- Script con la animación del % en barras de habilidades-->
   <script src="js/skillsProgressBar.js"></script>
 
 </body>
