--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum
             error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
+          <p class="firma"><img src="img/firma.png" alt="Image" ></p>
         </div>
         <div class="col-lg-4 order-3 order-lg-3">
           <ul class="about-info mt-4 px-md-0 px-2">
