--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum
             error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
-          <p class="firma"><img src="img/firma.png" alt="Image" ></p>
+          <p class="firma"><img src="img/firma.png" alt="Image"></p>
         </div>
         <div class="col-lg-4 order-3 order-lg-3">
           <ul class="about-info mt-4 px-md-0 px-2">
@@ -384,7 +384,26 @@
           <h3 class="section-subheading text-muted">"El denominador común para el éxito es el trabajo"</h3>
         </div>
       </div>
-      <div class="row">
+      <div class="row text-center">
+        <div class="col-md-3">
+          <h4 class="service-heading">Trabajo en equipo</h4>
+          <img class="icon" src="https://img.icons8.com/dusk/100/000000/teamwork.png">
+
+        </div>
+        <div class="col-md-3">
+          <h4 class="service-heading">Organización</h4>
+          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/calendar.png">
+        </div>
+        <div class="col-md-3">
+          <h4 class="service-heading">Constancia</h4>
+          <img class="icon" src="https://img.icons8.com/cotton/100/000000/flex-biceps.png">
+        </div>
+        <div class="col-md-3">
+          <h4 class="service-heading">Aprendizaje</h4>
+          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/learning.png">
+        </div>
+      </div>
+      <div class="row pt-4">
         <div class="col-lg-4 py-4">
           <h4 class="text-center">Lenguajes de programación</h4>
           <ul class="skills-bar-container px-0">
