--- a/index.html
+++ b/index.html
@@ -387,20 +387,23 @@
       <div class="row text-center">
         <div class="col-md-3">
           <h4 class="service-heading">Trabajo en equipo</h4>
-          <img class="icon" src="https://img.icons8.com/dusk/100/000000/teamwork.png">
+          <img class="icon" src="https://img.icons8.com/dusk/100/000000/teamwork.png" alt="Trabajo en equipo">
 
         </div>
         <div class="col-md-3">
           <h4 class="service-heading">Organización</h4>
-          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/calendar.png">
+          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/calendar.png"
+            alt="Icono Organización">
         </div>
         <div class="col-md-3">
           <h4 class="service-heading">Constancia</h4>
-          <img class="icon" src="https://img.icons8.com/cotton/100/000000/flex-biceps.png">
+          <img class="icon" src="https://img.icons8.com/cotton/100/000000/flex-biceps.png"
+            alt="Icono constancia">
         </div>
         <div class="col-md-3">
           <h4 class="service-heading">Aprendizaje</h4>
-          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/learning.png">
+          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/learning.png"
+            alt="Icono Aprendizaje">
         </div>
       </div>
       <div class="row pt-4">
@@ -539,7 +542,7 @@
                 <div class="row">
                   <div class="col-9">
                     <h5>HTML5</h5>
-                    <img class="img-fluid" src="img/technologies/html.png" alt="html">
+                    <img class="img-fluid" src="img/technologies/html.png" alt="html5">
                   </div>
                   <div class="col-3">
                     <span class="percent" id="html-pourcent"></span>
@@ -555,7 +558,7 @@
                 <div class="row">
                   <div class="col-9">
                     <h5>CSS</h5>
-                    <img class="img-fluid" src="img/technologies/css.png" alt="css">
+                    <img class="img-fluid" src="img/technologies/css.png" alt="css3">
                   </div>
                   <div class="col-3">
                     <span class="percent" id="css-pourcent"></span>
@@ -996,7 +999,7 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="http://maps.google.com/?q=Ciudad Real,España" target="_blank">Ciudad Real,
+          <a class="d-block" href="http://maps.google.com/?q=Ciudad Real,España" target="_blank">Ciudad+Real,
             España</a>
         </div>
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
@@ -1045,7 +1048,7 @@
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
-  <div class="portfolio-modal modal fade" id="portfolioModalLandmarkFinder" tabindex=" -1" role="dialog"
+  <div class="portfolio-modal modal fade" id="portfolioModalLandmarkFinder" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -1107,7 +1110,7 @@
 
 
   <!-- Modal 2 -->
-  <div class="portfolio-modal modal fade" id="portfolioModalElmCalculator" tabindex=" -1" role="dialog"
+  <div class="portfolio-modal modal fade" id="portfolioModalElmCalculator" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -1147,7 +1150,7 @@
   </div>
 
   <!-- Modal Food Finder -->
-  <div class="portfolio-modal modal fade" id="portfolioModalFoodFinder" tabindex=" -1" role="dialog" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="portfolioModalFoodFinder" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="container">
@@ -1216,7 +1219,7 @@
 
 
   <!-- Modal Calculadora RCV -->
-  <div class="portfolio-modal modal fade" id="portfolioModalCalculadoraRCV" tabindex=" -1" role="dialog"
+  <div class="portfolio-modal modal fade" id="portfolioModalCalculadoraRCV" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -1287,7 +1290,7 @@
 
 
   <!-- Modal Food Finder -->
-  <div class="portfolio-modal modal fade" id="portfolioModalPersonalWebsite" tabindex=" -1" role="dialog"
+  <div class="portfolio-modal modal fade" id="portfolioModalPersonalWebsite" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -1355,7 +1358,7 @@
   </div>
 
   <!-- Modal Youtube DL -->
-  <div class="portfolio-modal modal fade" id="portfolioModalYoutubeDL" tabindex=" -1" role="dialog" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="portfolioModalYoutubeDL" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="container">
