Added Google link to footer

--- a/index.html
+++ b/index.html
@@ -80,19 +80,6 @@
       </div>
     </div>
   </nav>
-
-  <!-- Header. Home Page --
-  <header class="masthead" id="home">
-    <div class="container">
-      <div class="intro-text">
-        <div class="intro-lead-in">¡Hola, soy Sergio González!</div>
-        <div class="intro-heading text-uppercase">Estudiante de Ingeniería Informática</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="S4_T3.pdf"
-          download="CV_SGonzalezVelazquez">Descarga mi CV</a>
-      </div>
-    </div>
-  </header>
--->
   <!-- Header. Home Page -->
   <header class="site-blocks-cover overlay bg-light" id="home">
     <div class="container">
@@ -999,7 +986,7 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="http://maps.google.com/?q=Ciudad Real,España" target="_blank">Ciudad+Real,
+          <a class="d-block" href="http://maps.google.com/?q=Ciudad+Real,España" target="_blank">Ciudad+Real,
             España</a>
         </div>
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
@@ -1031,8 +1018,8 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" target="_blank">
-                <i class="fab fa-facebook-f"></i>
+              <a href="mailto:serglezv@gmail.com" target="_blank">
+                <i class="fab fa-google"></i>
               </a>
             </li>
           </ul>
