Added robots.txt and sitemap.xml

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </div>
 
-    <img src="img/sergio.png" alt="Image" class="img-face" data-aos="fade">
+    <img src="img/sergio.png" alt="foto de perfil" class="img-face" data-aos="fade">
   </header>
 
   <!-- Sobre mí -->
@@ -142,7 +142,7 @@
       <div class="row ">
         <div class="col-lg-4 order-1 order-lg-2 mb-4 mb-lg-0">
           <div class="bg-light pt-5">
-            <img src="img/about/fotoPerfil1.png" alt="Image" class="img-fluid">
+            <img src="img/about/fotoPerfil1.png" alt="foto perfil" class="img-fluid">
           </div>
 
         </div>
@@ -153,7 +153,7 @@
             error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum
             error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
-          <p class="firma"><img src="img/firma.png" alt="Image"></p>
+          <p class="firma"><img src="img/firma.png" alt="firma"></p>
         </div>
         <div class="col-lg-4 order-3 order-lg-3">
           <ul class="about-info mt-4 px-md-0 px-2">
@@ -216,7 +216,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/logos/uclm.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/logos/uclm.jpg" alt="uclm">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -231,7 +231,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/logos/berenguela.png" alt="">
+                  <img class="rounded-circle img-fluid" src="img/logos/berenguela.png" alt="ies berenguela de castilla">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
