--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/logos/berenguela.png" alt="ies berenguela de castilla">
+                  <img class="rounded-circle img-fluid" src="img/logos/berenguela.jpg" alt="ies berenguela de castilla">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -294,7 +294,7 @@
               'https://www.udemy.com/share/101Xc2A0ASeV1WRno=/',
               '_blank');" style="cursor: pointer;">
               <div class="meta">
-                <div class="photo" style="background-image: url(img/courses/udemy_android.png)"></div>
+                <div class="photo" style="background-image: url(img/courses/udemy_android.jpg)"></div>
               </div>
               <div class="description">
                 <h5>Programación de Android desde Cero </h5>
@@ -819,7 +819,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/ladnmarkFinder-thumbnail.png" alt="">
+              <img class="img-fluid" src="img/portfolio/ladnmarkFinder-thumbnail.jpg" alt="">
             </a>
             <div class="card-body">
               <h4 class="card-title">
@@ -864,7 +864,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/food-finder-thumbnail.png" alt="">
+              <img class="img-fluid" src="img/portfolio/food-finder-thumbnail.jpg" alt="">
             </a>
             <div class="card-body">
               <h4 class="card-title">
@@ -886,7 +886,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/rcv_thumbnail.png" alt="">
+              <img class="img-fluid" src="img/portfolio/rcv_thumbnail.jpg" alt="">
             </a>
             <div class="card-body">
               <h4 class="card-title">
