--- a/index.html
+++ b/index.html
@@ -379,18 +379,15 @@
         </div>
         <div class="col-md-3">
           <h4 class="service-heading">Organización</h4>
-          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/calendar.png"
-            alt="Icono Organización">
+          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/calendar.png" alt="Icono Organización">
         </div>
         <div class="col-md-3">
           <h4 class="service-heading">Constancia</h4>
-          <img class="icon" src="https://img.icons8.com/cotton/100/000000/flex-biceps.png"
-            alt="Icono constancia">
+          <img class="icon" src="https://img.icons8.com/cotton/100/000000/flex-biceps.png" alt="Icono constancia">
         </div>
         <div class="col-md-3">
           <h4 class="service-heading">Aprendizaje</h4>
-          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/learning.png"
-            alt="Icono Aprendizaje">
+          <img class="icon" src="https://img.icons8.com/plasticine/100/000000/learning.png" alt="Icono Aprendizaje">
         </div>
       </div>
       <div class="row pt-4">
@@ -823,7 +820,7 @@
             </a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Landmark Finder</a>
+                Landmark Finder
               </h4>
               <p class="card-date">DICIEMBRE, 2019</p>
               <hr class="divider">
@@ -847,7 +844,7 @@
             </a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">ELM Calculator</a>
+                ELM Calculator
               </h4>
               <p class="card-date">Julio, 2019</p>
               <hr class="divider">
@@ -868,7 +865,7 @@
             </a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Food Finder</a>
+                Food Finder
               </h4>
               <p class="card-date">Junio, 2019</p>
               <hr class="divider">
@@ -912,7 +909,7 @@
             </a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Personal Website</a>
+                Personal Website
               </h4>
               <p class="card-date">Diciembre, 2019</p>
               <hr class="divider">
@@ -936,7 +933,7 @@
             </a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Youtube Audio Downloader</a>
+                Youtube Audio Downloader
               </h4>
               <p class="card-date">enero, 2019</p>
               <hr class="divider">
@@ -1103,7 +1100,11 @@
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <img class="d-block w-100" src="img/portfolio/elm_calculator.gif" alt="Second slide">
+            <video class="d-block w-100" controls alt="Usando ELM calculator">
+              <source src="img/portfolio/elm_calculator.mp4" type="video/mp4">
+              No se puede reproducir
+            </video>
+
             <div class="col">
               <div class="modal-body">
 
@@ -1142,35 +1143,14 @@
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <div id="carouselExampleIndicators2" class="col-12 carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/portfolio/foodFinder1.png" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
+            <video class="d-block w-100" controls alt="Usando ELM calculator">
+              <source src="img/portfolio/foodFinder-video.mp4" type="video/mp4">
+              No se puede reproducir
+            </video>
+
             <div class="col">
               <div class="modal-body">
-                <h2>Food Finder</h2>
+                <h2>Food Finder21</h2>
                 <p class="item-intro text-muted">Aplicación móvil multiplataforma</p>
                 <p>Aplicación móvil de gestión de pedidos y reparto de comida a domicilio.
                   Desarrollo realizado con el objetivo de aprender la programación Orientada a Widgets de
