Resized technologies images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
   <!-- Custom fonts-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
@@ -1100,7 +1099,7 @@
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <video class="d-block w-100" controls alt="Usando ELM calculator">
+            <video class="d-block w-100" controls>
               <source src="img/portfolio/elm_calculator.mp4" type="video/mp4">
               No se puede reproducir
             </video>
@@ -1143,14 +1142,14 @@
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <video class="d-block w-100" controls alt="Usando ELM calculator">
+            <video class="d-block w-100" controls>
               <source src="img/portfolio/foodFinder-video.mp4" type="video/mp4">
               No se puede reproducir
             </video>
 
             <div class="col">
               <div class="modal-body">
-                <h2>Food Finder21</h2>
+                <h2>Food Finder</h2>
                 <p class="item-intro text-muted">Aplicación móvil multiplataforma</p>
                 <p>Aplicación móvil de gestión de pedidos y reparto de comida a domicilio.
                   Desarrollo realizado con el objetivo de aprender la programación Orientada a Widgets de
